--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="menu_stats">Statistics</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_feedback">Write a feedback</string>
+    <string name="getplaying">Let\'s get started !</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
 </resources>
